# pianotranscription

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  run.ps1
include/: main.h
lib/audio/: audio.c  audio.h
lib/fft/: fft.c  fft.h
